--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,88 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* COMMENT LIST DISPLAY */
+.comment-section {
+  margin-bottom: 2rem;
+  width: 100%; /* Might need to fix in IE11? */
+}
+
+.comment-list {
+  display: flex;
+  flex-direction: column;
+}
+
+/* INDIVIDUAL COMMENT DISPLAY */
+.comment {
+  display: flex;
+  flex-direction: column;
+  background: #fafafa;
+  @include card-shadow;
+  border-radius: 0.3rem;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.commenter-info {
+  display: flex;
+  flex-direction: row;
+  font-size: 0.7rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comment-text {
+  font-size: 0.9rem;
+  flex: 1;
+}
+
+.comment-date {
+  margin: 0;
+}
+
+.comment-control-link {
+  color: $ru500;
+  font-size: 0.8rem;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+}
+.comment-control-link:hover {
+  color: $ru800;
+}
+
+
+@media screen and (min-width: $desktop_breakpoint) {
+  .comment {
+    flex-direction: row;
+  }
+
+  .commenter-info {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 7rem;
+  }
+}
+
+/* COMMENT TICKER */
+.comment-ticker {
+  @include ticker;
+
+  .ticker-item a {
+    color: $ru700;
+    font-size: 0.8rem;
+
+    display: block;
+
+    max-width: 17rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .ticker-item:hover {
+    background: #e2ee75c2;
+  }
+
+}
