--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "variables_and_mixins";
+
 /* COMMENT LIST DISPLAY */
 .comment-section {
   margin-bottom: 2rem;
