--- a/app/assets/stylesheets/textbooks.scss
+++ b/app/assets/stylesheets/textbooks.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "variables_and_mixins";
 
 $temp_textbook_color: #945707;
 
