--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
   %h1= @user.username
   .user-profile
     .user-profile-primary-info
-      = image_tag "logo.png", size: "100x100", class: "user-profile-image"
+      = image_tag "sample avatar.png", size: "100x100", class: "user-profile-image"
       %span.profile-info-label= (t'.home-country')
       %span.profile-info-text= @user.home_country
       %span.profile-info-label= (t'.location')
