--- a/app/assets/stylesheets/variables_and_mixins.scss
+++ b/app/assets/stylesheets/variables_and_mixins.scss
@@ -39,6 +39,10 @@ $ru700: #6e7a8a;
 $ru800: #404b5a;
 $ru900: #202833;
 
+$alert: #ebe79b;
+
+$warning: #f294a5;
+
 $desktop_breakpoint: 70rem;
 
 @mixin card-shadow {
