--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,9 +17,9 @@
   %body
     %header
       = render 'layouts/header' 
-      - flash.each do |message_type, message|
-        = content_tag :div, message, class: "alert alert-#{message_type}"
     %main{"role" => "main"}
+      - flash.each do |message_type, message|
+        = content_tag :div, message, class: "flash flash-#{message_type} alert-#{message_type}"
       .main-body-content
         = yield
     %footer
