--- a/app/views/tag_searches/_new.html.haml
+++ b/app/views/tag_searches/_new.html.haml
@@ -1,22 +1,36 @@
-.container
 =form_with(url: tag_search_path, method: :get, id: "tag-search-form") do
-  .accordion{"id" => "accordionCategory"}
-    - @tag_categories.each do |category|
-      .card
-        .card-header{"id" => "heading-#{category.name}"}
-          %h5.mb-0
-            %button.btn.btn-link.btn-block.text-left.collapsed{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
-                                  "aria-expanded" => "false", "aria-controls" => "collapse-category-#{category.id}", "type" => "button"}
-              %h5{"id" => "title-#{category.name}"}= category.name
-          %ul.selected-list{"id" => "selected_items-#{category.id}"}
-        %div.collapse{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-#{category.name}", "data-parent" => "#accordionCategory" }
-          .card-body
-            .container
-              %div.category-tag-grid.btn-group-toggle{ "data-toggle" => "buttons" }
-                = collection_check_boxes(:tag, :tag_ids, category.tags, :id, :name_for_lists) do |tag|
-                  %label.btn.category-tag-grid-item.btn-success{"aria-pressed" => "false", "data-bs-toggle" => "tooltip", "data-bs-placement" => "bottom", "title" => "#{tag.text.split('##')[1]}", "container" => 'body'}
-                    %p= tag.text.split('##')[0]
-                    %input{"class" => "form-check-input", "type" => "checkbox", "name" => "tag[tag_ids][]", "id" => "tag_tag_ids_#{tag.value}", "data-id" => "#{category.id}", "data-text" => "#{tag.text.split('##')[0]}", "value" => "#{tag.value}"}
-  .container
-  =submit_tag "Search", class: "btn btn-primary"
+  .tag-search-tag-selector
+    #tag-accumulator
+      %p I'm here to be a dynamically-generated list of tags that the user selects.
+    %ul
+      - @tag_categories.each do |category|
+        %li.form-tag-category
+          %p.form-tag-category-name= category.name
+          %ul.form-tag-list
+            = collection_check_boxes(:tag, :tag_ids, category.tags, :id, :name_for_lists) do |tag|
+              %li.form-tag
+                = tag.check_box(class: "form-tag-checkbox")
+                = tag.label do 
+                  %span.form-tag-name #{tag.text.split('##')[0]} -
+                  = markdown(tag.text.split('##')[1])
+  = submit_tag "Search", class: "submit-button"
+
+  -# .accordion{"id" => "accordionCategory"}
+  -#   - @tag_categories.each do |category|
+  -#     .card
+  -#       .card-header{"id" => "heading-#{category.name}"}
+  -#         %h5.mb-0
+  -#           %button.btn.btn-link.btn-block.text-left.collapsed{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
+  -#                                 "aria-expanded" => "false", "aria-controls" => "collapse-category-#{category.id}", "type" => "button"}
+  -#             %h5{"id" => "title-#{category.name}"}= category.name
+  -#         %ul.selected-list{"id" => "selected_items-#{category.id}"}
+  -#       %div.collapse{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-#{category.name}", "data-parent" => "#accordionCategory" }
+  -#         .card-body
+  -#           .container
+  -#             %div.category-tag-grid.btn-group-toggle{ "data-toggle" => "buttons" }
+  -#               = collection_check_boxes(:tag, :tag_ids, category.tags, :id, :name_for_lists) do |tag|
+  -#                 %label.btn.category-tag-grid-item.btn-success{"aria-pressed" => "false", "data-bs-toggle" => "tooltip", "data-bs-placement" => "bottom", "title" => "#{tag.text.split('##')[1]}", "container" => 'body'}
+  -#                   %p= tag.text.split('##')[0]
+  -#                   %input{"class" => "form-check-input", "type" => "checkbox", "name" => "tag[tag_ids][]", "id" => "tag_tag_ids_#{tag.value}", "data-id" => "#{category.id}", "data-text" => "#{tag.text.split('##')[0]}", "value" => "#{tag.value}"}
+  -# .container
     
