--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,5 +1,4 @@
-.card.mt-2
-  .card-body
-    %h5 Classroom Cupid
-    %p 
-    %h6.text-center= link_to "The Valentine's Day tag", tag_path(50), class: "text-center btn btn-success"
+.callout
+  %p.card-title It's a new school year!
+  %p.card-text Introducing yourself to the students?
+  = link_to "The Self-Introduction tag", tag_path(102), class: "card-tag-link"
