tag accumulator js, new activity form grammar points notice fixed

--- a/app/assets/stylesheets/tag_searches.scss
+++ b/app/assets/stylesheets/tag_searches.scss
@@ -66,4 +66,12 @@
     background: $ru200;
     border-radius: 0.5rem;
     padding: 0.5rem;
+    max-height: 20vh;
+    overflow-y: auto;
+}
+
+#tag-accumulator li {
+    list-style: none;
+    background-color: $ru400;
+    cursor: pointer;
 }
