--- a/app/assets/stylesheets/site_pages.scss.erb
+++ b/app/assets/stylesheets/site_pages.scss.erb
@@ -26,7 +26,7 @@
 }
 
 .fp-site-banner {
-  background-image: url('<%= asset_path 'Altopedia banner.png' %>');
+  background-image: url('<%= asset_path 'ALTopedia banner April.png' %>');
   height: 8rem;
   background-repeat: no-repeat;
   background-size: contain;
