--- a/app/views/tag_categories/index.html.haml
+++ b/app/views/tag_categories/index.html.haml
@@ -1,18 +1,20 @@
-- provide(:title, "All Tags")
+- provide(:title, "ALTopedia - Tags")
 
-.accordion
-  - @tag_categories.each do |category|
-    .card
-      .card-header{"id" => "heading-#{category.name}"}
-        %h5.mb-0
-          %button.btn.btn-link{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
-                              "aria-expanded" => "true", "aria-controls" => "collapse-category-#{category.id}" }
-            %h5= category.name
-      %div.collapse.show{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-category-#{category.id}", "data-parent" => "#accordion" }
-        .card-body
-          - category.tags.each do |tag|
-            = link_to markdown("#{tag.name_for_lists}"), tag
-            -# Making the entire line of text a link doesn't seem ideal, but Redcarpet surrounds its output in <p> tags by default
-            -# This ends up forcing the name and description on two separate lines
-            -# There may be a way to address that, but that will have to wait for another day
-            -# perhaps consider https://github.com/vmg/redcarpet/issues/92#issuecomment-35462000
+.full-generic-page
+  %h4 This page hasn't been rebuilt with the new interface yet. It still works, but it looks messy. It will get looked at soon. Sorry for the inconvenience!
+  .accordion
+    - @tag_categories.each do |category|
+      .card
+        .card-header{"id" => "heading-#{category.name}"}
+          %h5.mb-0
+            %button.btn.btn-link{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
+                                "aria-expanded" => "true", "aria-controls" => "collapse-category-#{category.id}" }
+              %h5= category.name
+        %div.collapse.show{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-category-#{category.id}", "data-parent" => "#accordion" }
+          .card-body
+            - category.tags.each do |tag|
+              = link_to markdown("#{tag.name_for_lists}"), tag
+              -# Making the entire line of text a link doesn't seem ideal, but Redcarpet surrounds its output in <p> tags by default
+              -# This ends up forcing the name and description on two separate lines
+              -# There may be a way to address that, but that will have to wait for another day
+              -# perhaps consider https://github.com/vmg/redcarpet/issues/92#issuecomment-35462000
